tests/ui/associated-consts/infer-placeholder-in-non-suggestable-pos.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for associated constants
  --> $DIR/infer-placeholder-in-non-suggestable-pos.rs:6:26
   |
LL |     const ASSOC: &dyn Fn(_) = 1i32;
   |                          ^ not allowed in type signatures

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0121`.
